<resources>
    <string name="app_name">Application</string>

    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="other_permission" translatable="false">Permission</string>
    <string name="want_to_access_files_video_image">Want to access your Photos/Videos to send Image/Video to complete your request, sending to Chat and set your profile image</string>
    <string name="not_now">Not now</string>
    <string name="take_permission">Take Permissions</string>
    <string name="settings">Settings</string>
    <string name="next">Next</string>
    <string name="cancel">Cancel</string>
    <string name="select_photos">Select Photos</string>
    <string name="select_max_photo_error">You can select max %d photos</string>
    <string name="menu_gallery_done">Done</string>
    <string name="title_image_selected">%d selected</string>

</resources>