<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/locIcon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:scaleType="center"
        android:src="@drawable/ic_storage" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/locTitleText"
        style="@android:style/Widget.DeviceDefault.Light.TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/locIcon"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/other_permission"
        android:textSize="18sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/locMessageText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/locTitleText"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/want_to_access_files_video_image"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/locButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/locNegativeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#153252"
            android:background="#00000000"
            android:textAllCaps="false"
            android:text="@string/not_now"
            tools:ignore="OnClick" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/locOkButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:textColor="#153252"
            android:background="#00000000"
            android:textAllCaps="false"
            tools:ignore="OnClick" />
    </LinearLayout>

</RelativeLayout>